--- a/frontend/src/app/home/home.page.scss
+++ b/frontend/src/app/home/home.page.scss
@@ -15,7 +15,7 @@
   display: flex;
 }
 .logo-and-message {
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 .button-container {
   justify-content: center;
