--- a/frontend/src/app/forms/steps/education-info-entry/education-info-entry.component.html
+++ b/frontend/src/app/forms/steps/education-info-entry/education-info-entry.component.html
@@ -37,21 +37,20 @@
 
       <ion-item class="ion-no-padding entry-item">
         <ion-icon slot="start" name="school-outline" size="large"></ion-icon>
-        <ion-label color="medium">{{
-          'educationInfo.degree' | translate
-        }}</ion-label>
+        <ion-label color="medium">
+          {{ 'educationInfo.degree' | translate }}
+        </ion-label>
         <ion-select
           slot="end"
           interface="popover"
-          placeholder="{{ 'educationInfo.master' | translate }}"
           [formControl]="education.controls.degree"
         >
           <ion-select-option
             *ngFor="let degree of degreeTypeArray"
             [value]="degree.value"
           >
-            {{ degree.displayName }}</ion-select-option
-          >
+            {{ degree.displayName }}
+          </ion-select-option>
         </ion-select>
       </ion-item>
 
