Set the header font color to our primary one on some pages

--- a/frontend/src/app/applicants/applicants.page.html
+++ b/frontend/src/app/applicants/applicants.page.html
@@ -5,7 +5,9 @@
         <ion-icon name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title> {{'applicantsPage.applications' | translate}}</ion-title>
+    <ion-title color="primary">
+      {{'applicantsPage.applications' | translate}}</ion-title
+    >
   </ion-toolbar>
 </ion-header>
 
