added work experience navigation and side menu

--- a/frontend/src/app/forms/side-menu/side-menu.component.html
+++ b/frontend/src/app/forms/side-menu/side-menu.component.html
@@ -56,6 +56,16 @@
         <ng-container
           [ngTemplateOutlet]="menuItem"
           [ngTemplateOutletContext]="{
+            step: APPLICATION_STEP.WorkExperience,
+            displayName: 'Work Experience',
+            isValid: formsData.controls.workExperienceInfo.valid,
+            isActive: currentStep === APPLICATION_STEP.WorkExperience
+          }"
+        ></ng-container>
+
+        <ng-container
+          [ngTemplateOutlet]="menuItem"
+          [ngTemplateOutletContext]="{
             step: APPLICATION_STEP.EducationInformation,
             displayName: 'Education Information',
             isValid: formsData.controls.educationInfo.valid,
