--- a/frontend/src/app/forms/steps/work-experience/work-experience.component.html
+++ b/frontend/src/app/forms/steps/work-experience/work-experience.component.html
@@ -1,3 +1,50 @@
-<p>
-  work-experience works!
-</p>
+<div class="main-description">
+  <h1>Work Experience</h1>
+
+  Here, you can add your information regarding your work.
+
+  <div class="add-container ion-padding">
+    <ion-icon
+      name="add-circle"
+      color="primary"
+      (click)="addWorkExperience()"
+      class="plus-icon"
+    ></ion-icon>
+  </div>
+  <ion-list>
+    <!-- Sliding item with education information -->
+    <ion-item-sliding
+      *ngFor="
+        let data of this.formsData.controls.workExperienceInfo.controls
+          .workExperienceForm.controls;
+        let i = index
+      "
+    >
+      <ion-item (click)="modifyWorkExperience()" class="ion-no-padding">
+        <ion-label>
+          <h1>{{ data.controls.jobTitle.value }}</h1>
+          <p>
+            <ion-icon name="easel-outline"></ion-icon>
+            {{ data.controls.company.value }}
+          </p>
+          <p>
+            <ion-icon name="school-outline"></ion-icon>
+            {{ data.controls.employmentType.value }}'s degree ({{
+              data.controls.startDate.value
+            }}, {{ data.controls.endDate.value }})
+          </p>
+        </ion-label>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option
+          color="danger"
+          expandable
+          (click)="deleteWorkExperience(i)"
+        >
+          <ion-icon name="trash" size="large"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
+</div>
