work experience entry read and save feature

--- a/frontend/src/app/forms/steps/work-experience/work-experience-entry/work-experience-entry.component.html
+++ b/frontend/src/app/forms/steps/work-experience/work-experience-entry/work-experience-entry.component.html
@@ -1,3 +1,97 @@
-<p>
-  work-experience-entry works!
-</p>
+<ion-header class="ion-no-border">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="cancel()">Cancel</ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button [disabled]="!work.valid" (click)="save()">Save</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <div class="main-container">
+    <ion-list>
+      <ion-item class="ion-no-padding entry-item">
+        <ion-icon slot="start" name="ribbon-outline" size="large"></ion-icon>
+        <ion-input
+          type="text"
+          placeholder="Title"
+          [formControl]="work.controls.jobTitle"
+        >
+        </ion-input>
+      </ion-item>
+
+      <ion-item class="ion-no-padding entry-item">
+        <ion-icon slot="start" name="business-outline" size="large"></ion-icon>
+        <ion-input
+          type="text"
+          placeholder="Company"
+          [formControl]="work.controls.company"
+        ></ion-input>
+      </ion-item>
+
+      <ion-item class="ion-no-padding entry-item">
+        <ion-icon slot="start" name="briefcase-outline" size="large"></ion-icon>
+        <ion-label color="medium">Employment Type</ion-label>
+        <ion-select
+          slot="end"
+          interface="popover"
+          placeholder="Employment Type"
+          [formControl]="work.controls.employmentType"
+        >
+          <ion-select-option
+            *ngFor="let empType of employmentTypeArray"
+            [value]="empType.value"
+          >
+            {{ empType.displayName }}</ion-select-option
+          >
+        </ion-select>
+      </ion-item>
+
+      <ion-row>
+        <ion-col col-6>
+          <ion-item class="ion-no-padding entry-item">
+            <ion-icon
+              slot="start"
+              name="calendar-outline"
+              size="large"
+            ></ion-icon>
+            <ion-datetime
+              displayFormat="MMM-YYYY"
+              pickerFormat="MMMM:YYYY"
+              max="2030"
+              min="1980"
+              placeholder="Start Date"
+              [formControl]="work.controls.startDate"
+              class="ion-no-padding"
+            ></ion-datetime>
+          </ion-item>
+        </ion-col>
+        <ion-col col-6>
+          <ion-item class="ion-no-padding entry-item">
+            <ion-datetime
+              displayFormat="MMM-YYYY"
+              pickerFormat="MMMM:YYYY"
+              max="2030"
+              min="1980"
+              placeholder="End Date"
+              [formControl]="work.controls.endDate"
+              class="ion-no-padding"
+            ></ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-item class="ion-no-padding entry-item">
+        <ion-icon slot="start" name="reader-outline" size="large"></ion-icon>
+        <ion-textarea
+          auto-grow="true"
+          placeholder="Description"
+          [formControl]="work.controls.description"
+        >
+        </ion-textarea>
+      </ion-item>
+    </ion-list>
+  </div>
+</ion-content>
