--- a/frontend/src/app/rating/steps/applicant-score/applicant-score.component.html
+++ b/frontend/src/app/rating/steps/applicant-score/applicant-score.component.html
@@ -1,4 +1,8 @@
-<h1>{{ 'hrSideMenu.applicantRating' | translate }}</h1>
+<div class="main-description">
+  <h1>{{ 'hrSideMenu.applicantRating' | translate }}</h1>
+
+  {{ 'ratingPage.applicantRatingDescription' | translate }}
+</div>
 
 <ion-list lines="none">
   <ion-list-header>
@@ -8,7 +12,7 @@
   <ion-item class="rating">
     <ion-range
       min="1"
-      max="6"
+      max="5"
       step="1"
       snaps="true"
       color="secondary"
@@ -23,7 +27,7 @@
   <ion-item class="rating">
     <ion-range
       min="1"
-      max="6"
+      max="5"
       step="1"
       snaps="true"
       color="secondary"
@@ -38,7 +42,7 @@
   <ion-item class="rating">
     <ion-range
       min="1"
-      max="6"
+      max="5"
       step="1"
       snaps="true"
       color="secondary"
@@ -53,7 +57,7 @@
   <ion-item class="rating">
     <ion-range
       min="1"
-      max="6"
+      max="5"
       step="1"
       snaps="true"
       color="secondary"
