--- a/frontend/src/app/forms/forms.page.scss
+++ b/frontend/src/app/forms/forms.page.scss
@@ -1,3 +1,33 @@
 ion-progress-bar {
   height: 10px;
 }
+
+.custom-skip {
+  opacity: 0.15;
+  pointer-events: none;
+}
+
+.custom-skip-item {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 15px;
+}
+.custom-toggle {
+  --handle-height: 30px;
+  height: 30px;
+}
+
+.top-button {
+  font-size: 26px;
+  color: var(--ion-color-secondary-contrast);
+  background: var(--ion-color-secondary);
+  padding: 1rem;
+  border-radius: 1000px 0 1000px 1000px;
+  font-weight: 500;
+  letter-spacing: 4px;
+  outline: none;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-right: 1.5rem;
+  margin-left: 1.5rem;
+}
