--- a/frontend/src/app/forms/steps/work-experience/work-experience-entry/work-experience-entry.component.html
+++ b/frontend/src/app/forms/steps/work-experience/work-experience-entry/work-experience-entry.component.html
@@ -54,14 +54,14 @@
           >
         </ion-select>
       </ion-item>
-
+      <!-- for alignment issue icon is given medium for calender-->
       <ion-row>
-        <ion-col col-3>
+        <ion-col>
           <ion-item class="ion-no-padding entry-item">
             <ion-icon
               slot="start"
               name="calendar-outline"
-              size="large"
+              size="medium"
             ></ion-icon>
             <ion-datetime
               displayFormat="MMM-YYYY"
@@ -74,7 +74,7 @@
             ></ion-datetime>
           </ion-item>
         </ion-col>
-        <ion-col col-3>
+        <ion-col>
           <ion-item class="ion-no-padding entry-item">
             <ion-datetime
               displayFormat="MMM-YYYY"
