--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -22,17 +22,17 @@
                   <Image url="@../Style/welcomescreen.png" />
                </image>
             </ImageView>
-               <TitledPane animated="false" collapsible="false" maxHeight="1000.0" prefHeight="592.0" prefWidth="200.0" text="Basic Info">
+               <TitledPane animated="false" collapsible="false" maxHeight="1000.0" prefHeight="592.0" prefWidth="200.0" text="Basic Information">
                   <GridPane prefHeight="283.0" prefWidth="198.0">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="90.0" minWidth="10.0" prefWidth="78.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="116.0" minWidth="10.0" prefWidth="113.0" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="50.0" minHeight="40.0" prefHeight="26.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
@@ -59,7 +59,7 @@
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font></Label>
-                        <Label prefHeight="33.0" prefWidth="103.0" text="Phone Number" textFill="WHITE" wrapText="true" GridPane.rowIndex="3">
+                        <Label prefHeight="57.0" prefWidth="95.0" text="Phone Number" textFill="WHITE" wrapText="true" GridPane.rowIndex="3">
                            <padding>
                               <Insets left="10.0" />
                            </padding>
@@ -80,37 +80,23 @@
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font></Label>
-                        <Label fx:id="lblFNameFX" textFill="WHITE" GridPane.columnIndex="1">
-                           <GridPane.margin>
-                              <Insets left="10.0" />
-                           </GridPane.margin></Label>
-                        <Label fx:id="lblLNameFX" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets left="10.0" />
-                           </GridPane.margin></Label>
-                        <Label fx:id="lblEmailFX" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding></Label>
-                        <Label fx:id="lblPNumberFX" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding></Label>
-                        <Label textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding></Label>
-                        <Label textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="5">
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding></Label>
+                        <TextField fx:id="lblFNameFX" editable="false" prefHeight="25.0" prefWidth="98.0" GridPane.columnIndex="1">
+                           </TextField>
+                        <TextField fx:id="lblLNameFX" editable="false" prefHeight="25.0" prefWidth="116.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           </TextField>
+                        <TextField fx:id="lblEmailFX" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           </TextField>
+                        <TextField fx:id="lblPNumberFX" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           </TextField>
+
                            <Hyperlink fx:id="hplLinkedInFX" text="" textFill="WHITE" underline="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        
                            <Hyperlink fx:id="hplXingFX" text="" textFill="WHITE" underline="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
                      </children>
                   </GridPane>
                </TitledPane>
-               <TitledPane animated="false" collapsible="false" maxHeight="1000.0" prefHeight="592.0" prefWidth="200.0" text="Additional Info">
+               <TitledPane animated="false" collapsible="false" maxHeight="1000.0" prefHeight="592.0" prefWidth="200.0" text="Additional Information">
                      <content>
                         <GridPane prefHeight="283.0" prefWidth="198.0">
                            <Label fx:id="lblAddInfo" alignment="TOP_LEFT" textFill="WHITE" />
@@ -161,7 +147,7 @@
                              <SplitPane dividerPositions="0.2358974358974359, 0.6128205128205129" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
                                 <items>
 
-                                   <TitledPane maxHeight="400.0" minHeight="100.0" prefHeight="200.0" text="Education Info" wrapText="true">
+                                   <TitledPane collapsible="false" maxHeight="400.0" minHeight="100.0" prefHeight="200.0" text="Education Information" wrapText="true">
                                       <content>
                                          
                                          <TableView fx:id="eduInfoTblFX" maxHeight="500.0" prefHeight="0.0">
@@ -184,27 +170,74 @@
                                          <Cursor fx:constant="NONE" />
                                       </cursor>
                                    </TitledPane>
-                                   <TitledPane collapsible="false" maxHeight="400.0" minHeight="150.0" prefHeight="141.0" text="Key Competencies" wrapText="true">
+                                   <TitledPane alignment="TOP_LEFT" collapsible="false" maxHeight="400.0" minHeight="150.0" prefHeight="141.0" text="Key Competencies" wrapText="true">
                                       <content>
-                                         <TableView maxHeight="1000.0" prefHeight="201.0">
+                                         <SplitPane dividerPositions="0.20297029702970298, 0.400990099009901, 0.5825082508250825, 0.7739273927392739" maxWidth="5000.0" prefHeight="179.0" prefWidth="560.0">
+                                         <items>
+                                         <TableView fx:id="pLnFWTableFX" prefHeight="179.0" prefWidth="98.0">
                                             <columns>
-                                               <TableColumn fx:id="proL_frameWFX" minWidth="-1.0" prefWidth="197.0" text="Programming Languages &amp; Frameworks" />
-                                               <TableColumn fx:id="dbFX" minWidth="-1.0" prefWidth="130.0" text="Databases" />
-                                               <TableColumn fx:id="proSoftFX" minWidth="-1.0" prefWidth="137.0" text="Professional Software" />
-                                               <TableColumn fx:id="spoLanFX" minWidth="-1.0" prefWidth="142.0" resizable="false" text="Spoken Languages" />
+                                               <TableColumn fx:id="pLnFWColFX" minWidth="-1.0" prefWidth="197.0" text="Programming Languages &amp; Frameworks" />
                                             </columns>
-                                                <columnResizePolicy>
-                                                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                                </columnResizePolicy>
                                                 <cursor>
                                                    <Cursor fx:constant="DEFAULT" />
                                                 </cursor>
+                                                   <columnResizePolicy>
+                                                      <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                   </columnResizePolicy>
                                          </TableView>
+                                         <TableView fx:id="bSkillsTableFX">
+                                            <columns>
+                                               <TableColumn fx:id="bSkillsColFX" minWidth="-1.0" prefWidth="142.0" text="Bussiness Skills" />
+                                            </columns>
+                                            <cursor>
+                                               <Cursor fx:constant="DEFAULT" />
+                                            </cursor>
+                                                   <columnResizePolicy>
+                                                      <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                   </columnResizePolicy>
+                                         </TableView>
+                                            <TableView fx:id="dBTableFX">
+                                               <columns>
+                                                  <TableColumn fx:id="dBColFX" minWidth="-1.0" prefWidth="130.0" text="Databases" />
+                                               </columns>
+                                               <cursor>
+                                                  <Cursor fx:constant="DEFAULT" />
+                                               </cursor>
+                                                   <columnResizePolicy>
+                                                      <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                   </columnResizePolicy>
+                                            </TableView>
+
+                                         <TableView fx:id="proSoftTableFX">
+                                            <columns>
+                                               <TableColumn fx:id="proSoftColFX" minWidth="-1.0" prefWidth="137.0" text="Professional Software" />
+                                            </columns>
+                                            <cursor>
+                                               <Cursor fx:constant="DEFAULT" />
+                                            </cursor>
+                                                   <columnResizePolicy>
+                                                      <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                   </columnResizePolicy>
+                                         </TableView>
+                                            <TableView fx:id="spoLanTableFX">
+                                               <columns>
+                                                  <TableColumn fx:id="spoLanColFX" minWidth="-1.0" prefWidth="142.0" text="Spoken Languages" />
+                                               </columns>
+                                               <cursor>
+                                                  <Cursor fx:constant="DEFAULT" />
+                                               </cursor>
+                                                   <columnResizePolicy>
+                                                      <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                   </columnResizePolicy>
+                                            </TableView>
+                                                
+                                         </items>
+                                         </SplitPane>
                                       </content>
                                    </TitledPane>
 
-                                   <TitledPane collapsible="false" maxHeight="600.0" minHeight="150.0" prefHeight="453.0" text="Application Info" wrapText="true">
-                                      <SplitPane dividerPositions="0.41598360655737704" maxWidth="5000.0" prefHeight="219.0">
+                                   <TitledPane collapsible="false" maxHeight="600.0" minHeight="150.0" prefHeight="453.0" text="Fields of Interest" wrapText="true">
+                                      <SplitPane dividerPositions="0.5" maxWidth="5000.0" prefHeight="219.0">
                                       <items>
                                          <TableView id="posTable" fx:id="posTable" maxHeight="600.0" maxWidth="2000.0" minWidth="300.0" prefHeight="219.0" prefWidth="600">
                                             <columns>
@@ -247,20 +280,20 @@
                              </SplitPane>
                           </Tab>
 
-                          <Tab text="Documents" />
-                          <Tab text="Experience" />
+                          <Tab fx:id="docTabFX" text="Documents">
+                             <ScrollPane fx:id="documentsGridFX" fitToHeight="true" prefHeight="283.0" prefWidth="198.0">
+
+                             </ScrollPane>
+                          </Tab>
+
                        </tabs>
                     </TabPane>
 
                  </items>
               </SplitPane>
-
            </items>
-
          </SplitPane>
-
       </items>
-
    </SplitPane>
    </center>
    <left>
