--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -1,29 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="600.0" prefWidth="830.0" stylesheets="@../Style/stylesheet.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="700.0" prefWidth="850.0" stylesheets="@../Style/stylesheet.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="5" />
    </top>
    <center>
-   <SplitPane dividerPositions="0.2644110275689223" prefHeight="520.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+   <SplitPane dividerPositions="0.2644110275689223" prefHeight="625.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
       <items>
       <!--  -->
-         <SplitPane dividerPositions="0.41598360655737704, 0.5" maxWidth="400.0" orientation="VERTICAL" prefHeight="511.0" prefWidth="400.0">
+         <SplitPane dividerPositions="0.29505813953488375, 0.7688953488372093" maxWidth="400.0" orientation="VERTICAL" prefHeight="511.0" prefWidth="400.0">
             <items>
-               <ImageView fx:id="imgFX" fitHeight="238.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <ImageView fx:id="imgFX" fitHeight="267.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Style/welcomescreen.png" />
                </image>
             </ImageView>
-               <TitledPane animated="false" collapsible="false" maxHeight="1000.0" prefHeight="592.0" prefWidth="200.0" text="Basic Information">
-                  <GridPane prefHeight="283.0" prefWidth="198.0">
+               <TitledPane alignment="CENTER" animated="false" collapsible="false" maxHeight="1000.0" minHeight="320.0" prefHeight="592.0" prefWidth="200.0" text="Basic Information">
+                  <GridPane alignment="CENTER" prefHeight="283.0" prefWidth="198.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="90.0" minWidth="10.0" prefWidth="78.0" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="116.0" minWidth="10.0" prefWidth="113.0" />
@@ -80,13 +97,13 @@
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font></Label>
-                        <TextField fx:id="lblFNameFX" editable="false" prefHeight="25.0" prefWidth="98.0" GridPane.columnIndex="1">
+                        <TextField fx:id="lblFNameFX" editable="false" prefHeight="25.0" prefWidth="98.0" style="-fx-background-color: transparent; -fx-text-fill: white;" GridPane.columnIndex="1">
                            </TextField>
-                        <TextField fx:id="lblLNameFX" editable="false" prefHeight="25.0" prefWidth="116.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <TextField fx:id="lblLNameFX" editable="false" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: transparent; -fx-text-fill: white;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            </TextField>
-                        <TextField fx:id="lblEmailFX" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <TextField fx:id="lblEmailFX" editable="false" style="-fx-background-color: transparent; -fx-text-fill: white;" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            </TextField>
-                        <TextField fx:id="lblPNumberFX" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <TextField fx:id="lblPNumberFX" editable="false" style="-fx-background-color: transparent; -fx-text-fill: white;" GridPane.columnIndex="1" GridPane.rowIndex="3">
                            </TextField>
 
                            <Hyperlink fx:id="hplLinkedInFX" text="" textFill="WHITE" underline="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
@@ -96,10 +113,10 @@
                      </children>
                   </GridPane>
                </TitledPane>
-               <TitledPane animated="false" collapsible="false" maxHeight="1000.0" prefHeight="592.0" prefWidth="200.0" text="Additional Information">
+               <TitledPane alignment="CENTER" animated="false" collapsible="false" maxHeight="1000.0" minWidth="100.0" prefHeight="592.0" prefWidth="200.0" text="Additional Information">
                      <content>
                         <GridPane prefHeight="283.0" prefWidth="198.0">
-                           <Label fx:id="lblAddInfo" alignment="TOP_LEFT" textFill="WHITE" />
+                           <Label fx:id="lblAddInfo" alignment="CENTER" prefHeight="113.0" prefWidth="192.0" textFill="WHITE" wrapText="true" />
                            <columnConstraints>
                               <ColumnConstraints />
                            </columnConstraints>
@@ -144,13 +161,13 @@
                     <TabPane prefHeight="500.0" prefWidth="582.0" rotateGraphic="true" tabClosingPolicy="UNAVAILABLE">
                        <tabs>
                           <Tab text="Information">
-                             <SplitPane dividerPositions="0.2358974358974359, 0.6128205128205129" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
+                             <SplitPane dividerPositions="0.22306525037936267, 0.4977238239757208, 0.8437025796661608" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
                                 <items>
 
-                                   <TitledPane collapsible="false" maxHeight="400.0" minHeight="100.0" prefHeight="200.0" text="Education Information" wrapText="true">
+                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="600.0" minHeight="50.0" prefHeight="200.0" text="Education Information" wrapText="true">
                                       <content>
                                          
-                                         <TableView fx:id="eduInfoTblFX" maxHeight="500.0" prefHeight="0.0">
+                                         <TableView fx:id="eduInfoTblFX" maxHeight="500.0" minHeight="50.0" prefHeight="0.0">
                                             <columns>
                                                <TableColumn fx:id="universityFX" prefWidth="142.0" text="University" />
                                                <TableColumn fx:id="subjectFX" prefWidth="149.0" text="Subject" />
@@ -170,13 +187,13 @@
                                          <Cursor fx:constant="NONE" />
                                       </cursor>
                                    </TitledPane>
-                                   <TitledPane alignment="TOP_LEFT" collapsible="false" maxHeight="400.0" minHeight="150.0" prefHeight="141.0" text="Key Competencies" wrapText="true">
+                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="600.0" minHeight="50.0" prefHeight="141.0" text="Key Competencies" wrapText="true">
                                       <content>
                                          <SplitPane dividerPositions="0.20297029702970298, 0.400990099009901, 0.5825082508250825, 0.7739273927392739" maxWidth="5000.0" prefHeight="179.0" prefWidth="560.0">
                                          <items>
-                                         <TableView fx:id="pLnFWTableFX" prefHeight="179.0" prefWidth="98.0">
+                                         <TableView fx:id="pLnFWTableFX" prefHeight="179.0" prefWidth="98.0" style="-fx-alignment: CENTER;">
                                             <columns>
-                                               <TableColumn fx:id="pLnFWColFX" minWidth="-1.0" prefWidth="197.0" text="Programming Languages &amp; Frameworks" />
+                                               <TableColumn fx:id="pLnFWColFX" minWidth="-1.0" prefWidth="197.0" style="-fx-alignment: CENTER;" text="Programming Languages &amp; Frameworks" />
                                             </columns>
                                                 <cursor>
                                                    <Cursor fx:constant="DEFAULT" />
@@ -187,7 +204,7 @@
                                          </TableView>
                                          <TableView fx:id="bSkillsTableFX">
                                             <columns>
-                                               <TableColumn fx:id="bSkillsColFX" minWidth="-1.0" prefWidth="142.0" text="Bussiness Skills" />
+                                               <TableColumn fx:id="bSkillsColFX" minWidth="-1.0" prefWidth="142.0" style="-fx-alignment: CENTER;" text="Bussiness Skills" />
                                             </columns>
                                             <cursor>
                                                <Cursor fx:constant="DEFAULT" />
@@ -198,7 +215,7 @@
                                          </TableView>
                                             <TableView fx:id="dBTableFX">
                                                <columns>
-                                                  <TableColumn fx:id="dBColFX" minWidth="-1.0" prefWidth="130.0" text="Databases" />
+                                                  <TableColumn fx:id="dBColFX" minWidth="-1.0" prefWidth="130.0" style="-fx-alignment: CENTER;" text="Databases" />
                                                </columns>
                                                <cursor>
                                                   <Cursor fx:constant="DEFAULT" />
@@ -210,7 +227,7 @@
 
                                          <TableView fx:id="proSoftTableFX">
                                             <columns>
-                                               <TableColumn fx:id="proSoftColFX" minWidth="-1.0" prefWidth="137.0" text="Professional Software" />
+                                               <TableColumn fx:id="proSoftColFX" minWidth="-1.0" prefWidth="137.0" style="-fx-alignment: CENTER;" text="Professional Software" />
                                             </columns>
                                             <cursor>
                                                <Cursor fx:constant="DEFAULT" />
@@ -221,7 +238,7 @@
                                          </TableView>
                                             <TableView fx:id="spoLanTableFX">
                                                <columns>
-                                                  <TableColumn fx:id="spoLanColFX" minWidth="-1.0" prefWidth="142.0" text="Spoken Languages" />
+                                                  <TableColumn fx:id="spoLanColFX" minWidth="-1.0" prefWidth="142.0" style="-fx-alignment: CENTER;" text="Spoken Languages" />
                                                </columns>
                                                <cursor>
                                                   <Cursor fx:constant="DEFAULT" />
@@ -236,10 +253,10 @@
                                       </content>
                                    </TitledPane>
 
-                                   <TitledPane collapsible="false" maxHeight="600.0" minHeight="150.0" prefHeight="453.0" text="Fields of Interest" wrapText="true">
+                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="600.0" minHeight="50.0" prefHeight="453.0" text="Fields of Interest" wrapText="true">
                                       <SplitPane dividerPositions="0.5" maxWidth="5000.0" prefHeight="219.0">
                                       <items>
-                                         <TableView id="posTable" fx:id="posTable" maxHeight="600.0" maxWidth="2000.0" minWidth="300.0" prefHeight="219.0" prefWidth="600">
+                                         <TableView id="posTable" fx:id="posTable" maxHeight="600.0" maxWidth="2000.0" minHeight="50.0" minWidth="300.0" prefHeight="219.0" prefWidth="600">
                                             <columns>
                                                <TableColumn fx:id="posFX" maxWidth="2000.0" minWidth="300" prefWidth="700.0" text="Position" />
                                             </columns>
@@ -251,7 +268,7 @@
                                                 </columnResizePolicy>
                                          </TableView>
 
-                                         <TableView id="posTable" fx:id="indTable" maxHeight="1000.0" maxWidth="5000.0" minWidth="300.0" prefHeight="219.0" prefWidth="0.0">
+                                         <TableView id="posTable" fx:id="indTable" maxHeight="1000.0" maxWidth="5000.0" minHeight="50.0" minWidth="300.0" prefHeight="219.0" prefWidth="0.0">
                                             <columns>
                                                <TableColumn id="indFX" fx:id="indFX" maxWidth="5000.0" minWidth="300" prefWidth="700.0" text="Industry" />
                                             </columns>
@@ -274,7 +291,39 @@
 
                                       </SplitPane>
                                    </TitledPane>
-
+                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="600.0" minHeight="100.0" prefHeight="150.0" text="HR Ratings" wrapText="true">
+                                          <content>
+                                             <SplitPane dividerPositions="0.5405405405405406" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+                                                <items>
+                                                   <SplitPane dividerPositions="0.2618657937806874, 0.5008183306055647, 0.723404255319149" prefHeight="160.0" prefWidth="200.0">
+                                                     <items>
+                                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+                                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+                                                         <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+                                                         <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+                                                     </items>
+                                                   </SplitPane>
+                                                   <SplitPane dividerPositions="0.3486088379705401" prefHeight="160.0" prefWidth="200.0">
+                                                     <items>
+                                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="213.0">
+                                                            <children>
+                                                               <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-2.0" prefHeight="30.0" prefWidth="213.0" style="-fx-background-color: #2980b9;" text="Comments of the Fairteam Member" textAlignment="CENTER" textFill="WHITE">
+                                                                  <font>
+                                                                     <Font name="System Bold" size="12.0" />
+                                                                  </font>
+                                                               </Label>
+                                                            </children>
+                                                         </AnchorPane>
+                                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                                            <children>
+                                                               <Text layoutX="8.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="378.13671875" />
+                                                            </children>
+                                                         </AnchorPane>
+                                                     </items>
+                                                   </SplitPane>
+                                                </items>
+                                             </SplitPane>
+                                          </content></TitledPane>
 
                                 </items>
                              </SplitPane>
@@ -291,9 +340,12 @@
 
                  </items>
               </SplitPane>
+
            </items>
          </SplitPane>
+
       </items>
+
    </SplitPane>
    </center>
    <left>
